[project]
name = "linkedin-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
]
